# RPG_HELPER

./: .gitignore  Action.h  CMakeLists.txt  Character.cpp  Character.h  EPriveleges.h  Exceptions.h  Game.h  GameMaster.h  NoTokenException.h  Player.h  TemporaryStorage.cpp  TemporaryStorage.h  Token.h  TokenHandler.h  User.h  main.cpp  test.cpp
ConsoleVersionOnlyCode/: StatSystemTemplateUserInteraction.cpp  StatSystemTemplateUserInteraction.h  TextInfoSystemTemplateUserInteraction.cpp  TextInfoSystemTemplateUserInteraction.h  TextInfoWithOptionsTemplateEditingConsole.cpp  TextInfoWithOptionsTemplateEditingConsole.h
ConsoleVersionOnlyCode/UserInputHandlers/: ConsoleValueGetter.cpp  ConsoleValueGetter.h
CustomExceptions/: StatSystemException.h
GameEvents/: GameEvent.cpp  GameEvent.h  GameEventChain.cpp  GameEventChain.h  GameEventEnum.h  GameEventFactory.cpp  GameEventFactory.h  GameEventManager.cpp  GameEventManager.h  GameEventOptions.cpp  GameEventOptions.h  IGameEvent.cpp  IGameEvent.h
StatisticsRelatedClasses/: StatSystem.cpp  StatSystem.h  StatSystemTemplate.cpp  StatSystemTemplate.h  Statistic.cpp  Statistic.h  StatisticTemplate.cpp  StatisticTemplate.h
TextInfoRelatedClasses/: TextInfo.h  TextInfoSystem.cpp  TextInfoSystem.h  TextInfoSystemTemplate.cpp  TextInfoSystemTemplate.h  TextInfoTemplateBase.h  TextInfoWithOptionsTemplate.cpp  TextInfoWithOptionsTemplate.h  TextInfoWithOptionsTemplateEditingInterface.h  TextInfoWithoutOptionsTemplate.h
